log/build_2021-10-22_03-03-59/ar_package/stderr.log
  File "/home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package/ar_node.py", line 10
    # 定期的に呼ばれる
    ^
SyntaxError: invalid character in identifier

